literatura a prilohy final

--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -59,13 +59,13 @@ interactive language for numerical computations},
   title = {Modelica by Example},
   medium = {online},
   accessed = {2019-04-21},
-  URL = {http://book.xogeny.com/behavior/equations/physical/\#physical-types},
+  URL = {http://book.xogeny.com/},
 }
 
 @book{MATLAB:2010,
-year = {2010},
+year = {2019},
 author = {MATLAB},
-title = {version 7.10.0 (R2010a)},
+title = {version 9.6.0 (R2019a)},
 publisher = {The MathWorks Inc.},
 address = {Natick, Massachusetts}
 }
@@ -211,4 +211,49 @@ isbn = {9780471740360},
 journal = {Wiley Encyclopedia of Biomedical Engineering},
 doi = {10.1002/9780471740360.ebs1089},
 publisher = {Wiley-Interscience}
+}
+
+@misc{freemat,
+  title = {FreeMat},
+  year = {2013},
+  medium = {online},
+  accessed = {2019-05-09},
+  URL = {http://freemat.sourceforge.net/},
+  author = {Demetrios Kyriakis}
+}
+
+@book{Cellierc2006,
+  author = {François E. Cellier and Ernesto Kofman},
+  title = {Continuous system simulation},
+  publisher = {Springer},
+  address = {New York},
+  year = {c2006},
+  ISBN = {978-0-387-26102-7},
+}
+
+@masterthesis{jmodelica-ide,
+  title = {Graphical Editing in JModelica.org},
+  address = {Lund},
+  year = {2012},
+  school = {Lund University},
+  type = {Diplomová práce},
+  medium = {online},
+  accessed = {2019-05-10},
+  URL = {http://sam.cs.lth.se/ExjobGetFile?id=471},
+}
+
+@misc{scilab,
+    title = {SciLab},
+    year = {2019},
+    medium = {online},
+    accessed = {2019-05-14},
+    URL = {https://www.scilab.org/}
+}
+
+@misc{jmodelica,
+    title = {jModelica},
+    year = {2019},
+    medium = {online},
+    accessed = {\today},
+    URL = {https://jmodelica.org/}
 }
