--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -257,3 +257,9 @@ publisher = {Wiley-Interscience}
     accessed = {\today},
     URL = {https://jmodelica.org/}
 }
+
+@article{alfaro1975simulation,
+  title={Simulation of aircraft crash and its validation},
+  author={Alfaro-Bou, E and Hayduk, RJ and Thomson, RG and Vaughan Jr, VL},
+  year={1975}
+}
