--- a/text/projekt-30-prilohy-appendices.tex
+++ b/text/projekt-30-prilohy-appendices.tex
@@ -1,9 +1,9 @@
 \chapter{Obsah přiloženého CD}
-CD přiložené k~bakalářské práci obsahuje tyto položky:
+CD přiložené k bakalářské práci obsahuje tyto položky:
 
 \begin{itemize}
     \item \texttt{/models} -- složka obsahující implementace pro jednotlivé simulační nástroje
     \item \texttt{/text} -- složka obsahující zdrojové testy potřebné pro přeložení a vygenerování bakalářské práce
-    \item \texttt{README.txt} -- soubor s~informacemi o~instalaci nástrojů a spuštění modelů v~těchto nástrojích
+    \item \texttt{README.txt} -- soubor s informacemi o instalaci nástrojů a spuštění modelů v těchto nástrojích
     \item \texttt{xvyslo05\_BP.pdf} -- výsledné znění textu bakalářské práce
 \end{itemize}
